* New app routing module with Routes * Implementing fxFlex on all templates * Refactor AppComponent * New Chart component * New DashBoard component * New Dynamic table component * New Loader spinner component * New Main container component * New Loader service * New NotFound resolver and component * New Scraper service * New server proxy routing

--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -63,7 +64,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "flask-scraper-front:build"
+            "browserTarget": "flask-scraper-front:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
@@ -74,7 +76,8 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "flask-scraper-front:build"
+            "browserTarget": "flask-scraper-front:build",
+
           }
         },
         "test": {
@@ -89,6 +92,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -120,6 +124,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "flask-scraper-front"
 }
